--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="assets/css/style.css" rel="stylesheet" type="text/css"  media="all" />
-  <link href="assets/css/style1.css" rel="stylesheet" type="text/css"  media="all" />
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+  <link href="assets/css/style1.css" rel="stylesheet" type="text/css" media="all"/>
   <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./assets/css/responsiveslides.css">
   <script src="assets/js/jquery.min.js"></script>
@@ -18,16 +18,17 @@
 <body>
 <script src="assets/js/poca.bundle.js"></script>
 
-  <app-root></app-root>
-  <script>
-    // You can also use "$(window).load(function() {"
-    $(function () {
-      // Slideshow 1
-      $("#slider1").responsiveSlides({
-        maxwidth: 1600,
-        speed: 600
-      });
+<app-root></app-root>
+<script>
+  // You can also use "$(window).load(function() {"
+  $(function () {
+    // Slideshow 1
+    $("#slider1").responsiveSlides({
+      maxwidth: 1600,
+      speed: 600
     });
-    </script>
-</body>
-</html>
+  });
+  <
+  /script>
+  < /body>
+  < /html>
