--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,14 @@
   <link href="assets/css/style.css" rel="stylesheet" type="text/css"  media="all" />
   <link href="assets/css/style1.css" rel="stylesheet" type="text/css"  media="all" />
   <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="./assets/css/responsiveslides.css">
+  <link rel="stylesheet" href="assets/css/responsiveslides.css">
+  <link rel="stylesheet" href="assets/css/style2.css" type="text/css" media="all">
+  <link rel="stylesheet" href="assets/fonts/material-icon/css/material-design-iconic-font.min.css" type="text/css">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/responsiveslides.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/default-assets/active.js"></script>
+  <script src="assets/js/main.js"></script>
 </head>
 <body>
 <script src="assets/js/poca.bundle.js"></script>
